# ca_dynamics

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-TEXT  README.md  build_site.py  myst.yml  pyproject.toml  requirements.txt
.binder/: postBuild  requirements.txt
.github/workflows/: deploy-book.yml  tests.yml
cadyn/: __init__.py  ca1d.py  ca2d.py  ecosystem.py  evolution.py  fds.py  numtheory.py  palettes.py
docs/: intro.md
examples/: make_appendix_figures.py  make_expansion_figures.py  make_figures.py  verify.py
latex/: book.tex
latex/chapters/: appendices.tex  bibliography.tex  ch1.tex  ch2.tex  ch3.tex  ch4.tex  ch5.tex  ch6.tex  ch7.tex  preface.tex
notebooks/: 01_what_are_cellular_automata.ipynb  02_zero_dimensional_ca.ipynb  03_one_dimensional_ca.ipynb  04_two_dimensional_ca.ipynb  05_ecosystem_modeling.ipynb  06_wolfram_classification.ipynb  07_evolutionary_dynamics.ipynb  README.md  _nbbuild.py  build_ch1_2.py  build_ch3_4.py  build_ch5_6_7.py
tests/: test_cadyn.py
